--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
+    "passport": "^0.7.0",
+    "passport-kakao": "^1.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
